# stitch-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  MQDB-OPTIMISTIC-LOCKING-ISSUE.md  MQDB-OPTIMISTIC-LOCKING-RESPONSE.md  Makefile.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/mqp2p/: Cargo.toml  README.md
crates/mqp2p/examples/: transfer.rs
crates/mqp2p/src/: error.rs  lib.rs  peer.rs  quic.rs  signaling.rs  stun.rs  transfer.rs
crates/mqp2p/tests/: integration.rs
crates/stitch/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
crates/stitch-harness/: Cargo.toml
crates/stitch-harness/src/: lib.rs
crates/stitch-p2p/: Cargo.toml  README.md
crates/stitch-p2p/spec/: README.md  StitchP2P.cfg  StitchP2P.tla  StitchP2PAuth.tla  StitchP2PAuth_causal.cfg  StitchP2PGc.tla  StitchP2PGc_protected.cfg  StitchP2PGc_protected_small.cfg  StitchP2PGc_unsafe.cfg  StitchP2PReclaim.tla  StitchP2PReclaim_naive.cfg  StitchP2PSkew.tla  StitchP2PTransitive.tla  StitchP2PTransitive_probe.cfg
crates/stitch-p2p/src/: discovery.rs  hlc.rs  lib.rs  lww.rs  membership.rs  node.rs  persistence.rs  protocol.rs  replog.rs  session.rs  store.rs  sync_state.rs  wire.rs
crates/stitch-p2p/tests/: convergence.rs  discovery_broker.rs  membership_sync.rs  node_mesh.rs  persistence.rs  quic_loopback.rs  signed_sync.rs
crates/stitch-tasks/: Cargo.toml  README.md
crates/stitch-tasks/src/: harness.rs
crates/stitch-wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/stitch-wasm/src/: lib.rs
crates/stitch-wasm/tests/: smoke.rs
crates/stitch/examples/: quickstart.rs
crates/stitch/src/: config.rs  db_helpers.rs  error.rs  lib.rs  lock.rs  memory_store.rs  offline_queue.rs  persistence.rs  queue.rs  remote_sync.rs  rt.rs  store.rs  sync_engine.rs  types.rs
crates/stitch/src/backend/: mod.rs  native.rs  wasm.rs
crates/stitch/src/mqtt_client/: mod.rs  native.rs  wasm.rs
crates/stitch/tests/: broker_harness.rs  last_will.rs  memory_store.rs  persistence.rs  store.rs  wire.rs
crates/stitch/tests/common/: mod.rs
examples/: quickstart.rs
spec/: README.md  StitchP2P.cfg  StitchP2PAuth_naive.cfg  StitchP2PGc_unsafe_small.cfg  StitchP2PReclaim_lwm.cfg  StitchP2PSkew.cfg  StitchP2PTransitive.cfg  StitchP2PTransitive_deep.cfg
src/: config.rs  db_helpers.rs  error.rs  harness.rs  lib.rs  lww.rs  membership.rs  memory_store.rs  node.rs  offline_queue.rs  origin.rs  persistence.rs  protocol.rs  remote_sync.rs  replog.rs  session.rs  store.rs  sync_engine.rs  sync_state.rs  types.rs  wire.rs
tests/: discovery_broker.rs  node_mesh.rs  offline_queue.rs  persistence.rs  quic_loopback.rs  remote_sync.rs  soak.rs  store.rs  store_sync.rs  transitive.rs  wire.rs
tests/common/: mod.rs
