[package]
name = "stitch-p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
mqp2p = { version = "0.1.0", path = "../mqp2p" }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "io-util", "macros", "rt", "rt-multi-thread", "time", "net"] }

[dev-dependencies]
tempfile = "3.27.0"
