[package]
name = "stitch-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Browser (wasm-bindgen) bindings for the stitch reactive state-sync store."
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = "0.3.32"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stitch = { version = "0.2.2", path = "../stitch" }
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
