[package]
name = "stitch"
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
description = "Reactive state-sync library bridging an in-memory store, fjall-backed local persistence, and MQTT-based remote sync."
authors = ["LabOverWire"]
repository = "https://github.com/LabOverWire/stitch"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "v7"] }

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flume = "0.12.0"
futures = "0.3.32"
mqdb-agent = { version = "0.8.10", path = "../../../../MQDB/crates/mqdb-agent", default-features = false }
mqdb-core = { version = "0.7.3", path = "../../../../MQDB/crates/mqdb-core" }
mqtt5 = { version = "0.32.2", path = "../../../../mqtt-lib/crates/mqtt5" }
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.32"
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3"
mqdb-core = { version = "0.7.3", path = "../../../../MQDB/crates/mqdb-core", default-features = false }
mqdb-wasm = { version = "0.3.3", path = "../../../../MQDB/crates/mqdb-wasm" }
mqtt5-protocol = "0.13.0"
mqtt5-wasm = { version = "1.3.2", path = "../../../../mqtt-lib/crates/mqtt5-wasm" }
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
