[package]
name = "stitch-sync"
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Reactive state-sync library bridging an in-memory store, fjall-backed local persistence, and MQTT-based remote sync."
authors = ["LabOverWire"]
repository = "https://github.com/LabOverWire/stitch-rs"
homepage = "https://github.com/LabOverWire/stitch-rs"
readme = "README.md"
keywords = ["state-sync", "mqtt", "reactive", "offline-first", "store"]
categories = ["asynchronous", "caching", "database", "network-programming", "wasm"]

[lib]
name = "stitch"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "v7"] }

[dev-dependencies]
stitch-harness = { path = "../stitch-harness" }
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flume = "0.12.0"
futures = "0.3.32"
mqdb-agent = { version = "0.8.10", default-features = false }
mqdb-core = "0.7.3"
mqtt5 = "0.32.2"
tokio = { version = "1.52.3", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3.32"
gloo-timers = { version = "0.4.0", features = ["futures"] }
js-sys = "0.3"
mqdb-core = { version = "0.7.3", default-features = false }
mqdb-wasm = "0.3.3"
mqtt5-protocol = "0.13.0"
mqtt5-wasm = "1.3.2"
tokio = { version = "1.52.3", default-features = false, features = ["sync"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
